Fixed some of the ramifications of the css specificity being changed, now that the ias-bootstrap styles are no longer being wrapped within the class: "ias-app".

--- a/docs/src/scss/_app-tweaks.scss
+++ b/docs/src/scss/_app-tweaks.scss
@@ -1,8 +1,3 @@
 app-ngbd-code > pre[class*="language-"] {
     margin: 0;
 }
-
-// Hide dropdown menus in the page header if they're empty
-.page-header-icon-menu > .dropdown-menu:empty {
-    display: none;
-}
